# Imgur-link-generator

./: .gitignore  Cargo.toml  README.md  build.nix  flake.nix
src/: code_generation.rs  main.rs  spinner.rs
