[package]
name = "imgur_link_generator"
version = "0.3.2"
authors = ["BatteredBunny <ayes2022@protonmail.com>"]
edition = "2021"
license = "GPLv3"
description = "Brute-forces imgur image links"

[dependencies]
fastrand = "1.9.0"
clap = { version = "4.2.7", features = ["derive"] }

tokio = { version = "1.28.0", features = ["full"] }
reqwest = "0.11.17"

[profile.release]
strip = true
